# TerrariaClone

./: CMakeLists.txt  README.md  post-build.bat
assets/shaders/: material.frag.glsl  material.vert.glsl
src/: array.h  gl_renderer.cpp  gl_renderer.h  main.cpp  render_types.h  shader.cpp  shader.h
